tests/NormalTests/paczka2/big_fuzzy/12129972.err
Error in line 1: 4fQBhF A974 13,7
Error in line 3: 4fQBhF A891 23,7
Error in line 12: A891 A205 245,00
Error in line 15: KqmMKu7eD3 A205 93,3
Error in line 8: A891 A205 92,8
Error in line 9: 4fQBhF A861 57,5
Error in line 18: KqmMKu7eD3 A974 40,3
Error in line 27: 4fQBhF A205 17,1
Error in line 22: LH1 A974 259,6
Error in line 36: LH1 A891 24,9
Error in line 54: TgdEXtQKAZl A861 39,1
Error in line 63: TgdEXtQKAZl A205 39,9
Error in line 64: zPV058i9FV A891 42,9
Error in line 67: 4fQBhF A891 55,3
Error in line 65: TgdEXtQKAZl A891 3,3
Error in line 73: zPV058i9FV A974 8,1
Error in line 76: zPV058i9FV A861 34,4
Error in line 86: LH1 A974 26,1
Error in line 99: 4fQBhF A861 87,9
Error in line 100: LH1 A205 94,6
Error in line 109: 4fQBhF A8^1 ^0,9
Error in line 101: 4fQBhF A974 20,2
Error in line 112: 4fQBhF A861 49,9
Error in line 123: A891 A974 77,0
Error in line 125: A891 A205 97,1
Error in line 135: zPV058i9FV A861 -2,8
Error in line 140: zbINvt8 A861 78,3
Error in line 151: A891 A861 25,3
Error in line 150: 4fQBhF A205 313,3
Error in line 158: 4fQBhF A891 48,7
Error in line 163: 4fQBhF A974 78,3
Error in line 164: 4fQBhF A205 45,5
Error in line 169: zPV058i9FV A974 80,5
Error in line 179: TgdEXtQKAZl A205 87,1
Error in line 185: 4fQBhF A891 94,5
Error in line 190: zPV058i9FV A861 67,5
Error in line 199: zPV058i9FV A891 12,3
Error in line 216: A891 A974 90,1
Error in line 222: 4fQBhF A205 1844
Error in line 229: TgdEXtQKAZl A891 57,2
Error in line 238: TgdEXtQKAZl A205 62,6
Error in line 244: zPV058i9FV A861 60,1
